# Yoink

./: .gitignore  LICENSE  README.md  pyproject.toml  yoink.py
tests/: test_yoink.py
