[project]
name = "yoink"
version = "0.1.0"
description = "A CLI tool for downloading YouTube videos in the best available quality"
authors  = [{name = "Jeremiah Igrami"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.14"
dependencies = [
    "pytubefix>=10.3.8",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

